--- a/student-club-backend/package.json
+++ b/student-club-backend/package.json
@@ -26,6 +26,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer": "^1.4.7",
+    "express": "^4.18.2",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
