--- a/student-club-front/package.json
+++ b/student-club-front/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@types/node": "^18.16.0",
+    "@types/nprogress": "^0.2.0",
     "ant-design-vue": "4.0.0-alpha.3",
+    "axios": "^1.4.0",
     "less": "^4.1.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.35",
     "unplugin-vue-components": "^0.24.1",
     "vue": "^3.2.47",
