--- a/student-club-backend/package.json
+++ b/student-club-backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/multer": "^1.4.7",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.2.4",
