--- a/student-club-front/package.json
+++ b/student-club-front/package.json
@@ -14,6 +14,7 @@
     "@types/nprogress": "^0.2.0",
     "ant-design-vue": "4.0.0-alpha.3",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "less": "^4.1.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.35",
