--- a/student-club-backend/package.json
+++ b/student-club-backend/package.json
@@ -27,10 +27,12 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.7",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.2.4",
+    "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.15"
